- small adjustment to the Equipment sections top margin (prevents overlap with the armour's background-image)

--- a/Ronin/ronin.css
+++ b/Ronin/ronin.css
@@ -1273,8 +1273,7 @@
     grid-area: equipment;
     grid-template-columns: minmax(5em, 1fr) minmax(10em, 3fr) min-content;
     grid-template-rows: 1.25em;
-    margin: 4em auto auto auto;
-    margin-right: 2%;
+    margin: 4.5em 2% auto auto;
     min-height: 19em;
     outline: 7px solid #333;
     outline-offset: -8px;
